--- a/bonus_Q_analysis.ipynb
+++ b/bonus_Q_analysis.ipynb
@@ -56,6 +56,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# I own a winery and I want to make Syrah in the US\n",
+    "But I do not yet know where I should plant this wonderful grape. I am going to look at this three ways. Where is it grown the most, where is it the most profitiable, and where is the best wine produced. By looking at these three things I am hoping to piece together an idea of some of the best regions in America to plant these vines. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -77,6 +85,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "so i ran into a problem where some of my regions that were poping up as high priced and high pointed had only oneon wine to their name, and that just is not relevent to what i am looking at as someone looking for a good placeto plant a grape so I wanted to get rid of regions with out so many wines."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TA Chris helped with this bit of code here\n",
+    "grape_df = grape_df[grape_df['Region'].map(grape_df['Region'].value_counts()) > 6]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -85,6 +110,13 @@
     "# groupby Province and Region\n",
     "region_gb = grape_df.groupby(['Province','Region'])\n",
     "region_gb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By grouping by both Province and Region I have both in the index and can access either if need be."
    ]
   },
   {
@@ -106,6 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# this is telling me which region is the largest producer of the grape\n",
     "grape_region = region_count.index[0][1]\n",
     "grape_state = region_count.index[0][0]\n",
     "grape_str = f\"{grape} is grown the most in the {grape_region} of {grape_state}.\"\n",
@@ -118,9 +151,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This is the number of Regions i am looking at in each plot\n",
+    "len_of_plot = 10 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# lets plot the top ten grape regions\n",
     "#lets start by dropping all other regions\n",
-    "len_of_plot = 10\n",
     "region_count_plot = region_count.head(len_of_plot)\n",
     "region_count_plot"
    ]
@@ -131,15 +173,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "region_list = [region_count_plot.index[i][1] for i in range(0,len_of_plot)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# This is generating a list of the regions for plotting on the x axis of the bar graph\n",
+    "region_list = [region_count_plot.index[i][1] for i in range(0,len_of_plot)] \n",
     "region_list"
    ]
   },
@@ -162,6 +197,13 @@
     "plt.grid(axis='y', alpha=.5)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Interesting here that in the top five are Columbia Valley, Walla Walla Valley and Yakima Valley, all are Washington State. While all of the others are California. This lines up with my experince out side of class, in that California produces a lot wine and that Washington is known for their Syrahs. I am interested to see if Washington shows up in Price and Points in the same quantity of valleys. "
    ]
   },
   {
@@ -202,6 +244,13 @@
     "plt.vlines(price_median,0,2000, color='r')\n",
     "plt.show()\n",
     "print(f'Mean is {price_mean}, Median is {price_median} and is red')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I was trying to decide between mean and median so I made this visual to look at the price data for Syrah. The data is clearly right skewed. and there is a discrepancy between mean and median. I decided to go with median because of these reasons."
    ]
   },
   {
@@ -271,6 +320,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I do not like this plot. I think it looks great, but looking at just price alone is misleading. I know from experience that price does not mean profit. Is it more expesive because it is good so they can charge more? Or is it more expensive because it is harder to grow the grape? There are numerous reasons that a bottle of wine could be 50 instead of 40. So I think this plot is a little misleading when looking at it as we are. We are looking for the most profitable regions to grow our vines. And this data just does not give us enough to do that. \n",
+    "Interesting titbit, the Walla Walla Valley on this plot is the same valley as the one on the previous plot but a different state. I will go into more detail later "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -303,6 +360,13 @@
     "print(f'Mean is {point_mean}, Median is {point_median} and is red')\n",
     "\n",
     "# I'd say this is ok to use the mean this time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again I wanted to decide between mean and median. This time the data looked normal so I went with mean."
    ]
   },
   {
@@ -359,6 +423,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have a good distrubition of WA, CA and OR regions here. It makes me think that there might be a certian terrior that produces excellent Syrah. Just good soil and the right sun and temp. These are the places that probably have the right stuff. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -405,20 +476,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This is relevent only to Syrah\n",
-    " so for syrah my valley's are Walla Walla Valley (OR) (I want to expand on this one later), Spring Mountain District\n",
-    "and Calistoga\n",
+    "# Walla Walla Valley\n",
     "\n",
-    "Walla Walla Valley actually comes up in all three. Once as washinton, and twice as oregon. This is a interesting valley that is located on top of the border of the two states and produces great wine. This seems like the ideal location for growing syrah.\n",
+    "Walla Walla Valley actually comes up in all three. Twice as Washinton, and twice as Wregon. This is a interesting valley that is located on top of the border of the two states and produces great wine. This seems like the ideal location for growing syrah.\n",
     "\n",
-    "Spring Mountain District and Calistoga are both by and in California's Napa Valley Region\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## this next part only pertains to Syrah"
+    "Walla Walla Valley has peaked my interest as a potential region to grow my Syrah vines so I am going to take a closer look at the region\n"
    ]
   },
   {
@@ -433,17 +495,8 @@
     "walla_walla_or = grape_df.loc[grape_df[\"Region\"] == \"Walla Walla Valley (OR)\", :]\n",
     "walla_walla_wa = grape_df.loc[grape_df[\"Region\"] == \"Walla Walla Valley (WA)\", :]\n",
     "\n",
-    "walla_walla = walla_walla_or.append(walla_walla_wa)\n",
-    "\n",
-    "walla_walla.tail()"
+    "walla_walla = walla_walla_or.append(walla_walla_wa)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -453,17 +506,44 @@
    "source": [
     "# plotting Price VS Points for Walla Walla Syrah (Two different States)\n",
     "plt.figure(figsize=(8,6))\n",
+    "\n",
+    "# Washingtion Plot\n",
     "walla_wa = plt.scatter(walla_walla_wa.Points, walla_walla_wa.Price, color='lightblue',\n",
-    "                                      alpha=.4, label='Walla Walla (WA)') # washington\n",
+    "                                      alpha=.4, label='Walla Walla (WA)')\n",
+    "# Oregon Plot\n",
     "walla_or = plt.scatter(walla_walla_or.Points, walla_walla_or.Price, color='orange',\n",
-    "                        alpha=.4, label='Walla Walla (OR)') # oregon\n",
+    "                        alpha=.4, label='Walla Walla (OR)')\n",
+    "\n",
     "# i need to add a legend\n",
     "plt.title(\"Price VS Points for Walla Walla Valley Syrah\")\n",
     "plt.xlabel('Points (out of 100)')\n",
     "plt.ylabel('Price ($)')\n",
     "\n",
-    "\n",
     "plt.legend()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I wanted to dive into Walla Walla Valley. I wanted to see how Points affected Price, and I wanted to see the relation ship between the two halfs of the valley. I fit both into one plot. On this you can see that there is on group of WA wines, while there are two groups of OR wines. A higher-priced/Higher-rated group and a Lower-rated/lower-priced group. It is really interesting to find that there are two Tiers of wine coming out of that region. I have an isolated Walla Walla (OR) plot below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plotting Price VS Points for Walla Walla Syrah (Two different States)\n",
+    "plt.figure(figsize=(8,6))\n",
+    "plt.scatter(walla_walla_or.Points, walla_walla_or.Price, color='orange', alpha=.4) # oregon\n",
+    "\n",
+    "plt.title(\"Price VS Points for Walla Walla Valley Oregon Syrah\")\n",
+    "plt.xlabel('Points (out of 100)')\n",
+    "plt.ylabel('Price ($)')\n",
     "\n",
     "plt.show()"
    ]
@@ -505,20 +585,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# plotting Price VS Points for Walla Walla Syrah (Two different States)\n",
-    "plt.figure(figsize=(8,6))\n",
-    "plt.scatter(walla_walla_or.Points, walla_walla_or.Price, color='orange', alpha=.4) # oregon\n",
-    "\n",
-    "plt.title(\"Price VS Points for Walla Walla Valley Oregon Syrah\")\n",
-    "plt.xlabel('Points (out of 100)')\n",
-    "plt.ylabel('Price ($)')\n",
-    "\n",
-    "plt.show()"
+    "I wanted to look at how points related to price in Walla Walla Syrah. So I did a linear regression. The correlation coefficent came back to be 0.64 so I'd say they are fairly correlated, meaning the higher the wine is rated the higher the price will probably be. And the linear regression seems alright so you are in a pinch and need to guess what the price of a bottle of Walla Walla Syrah is this could help you out."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I want to test out my linear regression on a bottle of wine. \n",
+    "Cayuse Vineyards Syrah 2013 Walla Walla Valley (WA) Rating = 95, My Store's price = 125, online price = 80\n",
+    "Let us see if my store is really over priced :)"
    ]
   },
   {
@@ -526,28 +605,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# finding price of Cayuse Syrah\n",
+    "cayuse_points = 95\n",
+    "cayuse_price = slope * cayuse_points + intercept\n",
+    "\n",
+    "print(f\"Cayuse 2013 Syrah is ${cayuse_price}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looks like that bottle might just be over priced in general. That or my linear regression is pulled down by all that delicisous inexpesive wine."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# end andy's code"
+   ]
   }
  ],
  "metadata": {
