--- a/analyzing_data.ipynb
+++ b/analyzing_data.ipynb
@@ -1286,7 +1286,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Understanding how many data points are in each column\n",
     "wine_df.nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### United States specific wine analysis"
    ]
   },
   {
@@ -1295,6 +1303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating a DF with only us wines\n",
     "US_only = wine_df.loc[wine_df[\"Country\"] == \"US\"]\n",
     "US_only"
    ]
@@ -1305,6 +1314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Summing the entries to finding out how many times each varietal is mentioned in the data\n",
     "us_var = US_only.groupby(\"Variety\")\n",
     "us_varieties = us_var.count()\n",
     "us_varieties"
@@ -1316,7 +1326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Summing all varieties that will be lummped together\n",
+    "# Summing all varieties that have less than 1000 data point; they will be lummped together\n",
     "other = 0\n",
     "for variety, row in us_varieties.iterrows():\n",
     "    if row[\"Country\"] < 1000:\n",
@@ -1353,7 +1363,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "us_var_top.loc[\"Other Wine (206 Varietals)\"] = [12575,12575,12575,12575,12575]\n",
+    "other_wine = pd.DataFrame([[other,other,other,other,other]], columns=list([\"Country\",\"Points\",\"Price\",\"Province\",\"Region\"]))\n",
+    "other_wine = other_wine.rename({\"0\":\"Other (206 Varietals)\"}) \n",
+    "other_wine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "us_var_top = us_var_top.append(other_wine, ignore_index=False)\n",
+    "us_var_top"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "us_var_top = us_var_top.sort_values(by=\"Country\", ascending=False)\n",
     "us_var_top"
    ]
@@ -1364,6 +1394,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating a pie chart that shows the prevelence of each varietal in teh US\n",
     "# Labels for the sections of our pie chart\n",
     "labels = us_var_top.index\n",
     "\n",
@@ -1393,6 +1424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# grouping the data by province to see how many entries there are for each province.\n",
     "province = US_only.groupby(\"Province\").count().sort_values(by=\"Country\", ascending=False)\n",
     "province"
    ]
@@ -1403,7 +1435,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Summing all varieties that will be lummped together\n",
+    "# Summing the entries to finding out how many times each province (region) is mentioned in the data\n",
     "other_prov = 0\n",
     "for prov, row in province.iterrows():\n",
     "    if row[\"Country\"] < 100:\n",
@@ -1421,7 +1453,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Returns the top wine producing provinces in the US\n",
+    "other_province = pd.DataFrame([[other_prov,other_prov,other_prov,other_prov,other_prov]], columns=list([\"Country\",\"Points\",\"Price\",\"Province\",\"Region\"]))\n",
+    "other_province"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Returns the top wine producing provinces in the US by looking at those with 1000 or more entries\n",
     "province_top = province.loc[province[\"Country\"] >1000]\n",
     "province_top"
    ]
@@ -1432,8 +1474,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "province_top.loc[\"Other Provinces (469 Provinces)\"] = [469,469,469,469,469]\n",
-    "province_top = province_top.sort_values(by=\"Country\", ascending=False)\n",
+    "# Adding the previoulsy deleted data back in as single summed data point\n",
+    "province_top.append(other_province, ignore_index=False)\n",
     "province_top"
    ]
   },
@@ -1443,6 +1485,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# province_top.loc[\"Other Provinces (469 Provinces)\"] = [other_prov,other_prov,other_prov,other_prov,other_prov]\n",
+    "# province_top = province_top.sort_values(by=\"Country\", ascending=False)\n",
+    "# province_top"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a pie chart that shows the prevelence of each province (region) in the US\n",
     "# Labels for the sections of our pie chart\n",
     "labels = province_top.index\n",
     "\n",
@@ -1483,11 +1537,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Which country produces \"the biggest bang for your buck?\"\n",
+    "* Identifying wines with with lower prices, but higher points."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# adding a new column to the complete DF that creates the ratio of points:price; the higher the value, the better the deal\n",
     "ratio_df = wine_df\n",
     "ratio_df[\"Points:Price\"] = ratio_df[\"Points\"]/ratio_df[\"Price\"]\n",
     "ratio_df"
@@ -1499,6 +1562,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# idenifying the mean of th ration by country\n",
     "mean = ratio_df.groupby(\"Country\").mean()\n",
     "mean"
    ]
@@ -1509,6 +1573,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# idenifying the median of th ration by country\n",
     "median = ratio_df.groupby(\"Country\").median()\n",
     "median"
    ]
@@ -1519,8 +1584,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# adding the mean and median into the DF for easier comparison\n",
     "mean_median = pd.merge(mean, median, left_index=True, right_index=True, suffixes=(\"_mean\",\"_median\"))\n",
-    "best = mean_median.sort_values(by=\"Points:Price_mean\", ascending=False)"
+    "best = mean_median.sort_values(by=\"Points:Price_mean\", ascending=False)\n",
+    "best"
    ]
   },
   {
@@ -1529,6 +1596,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# plotting the price/points mean per country\n",
     "x_axis_country = best.index\n",
     "point_per = best[\"Points:Price_mean\"]\n",
     "plt.bar(x_axis_country, point_per, align=\"center\")\n",
