--- a/analyzing_data.ipynb
+++ b/analyzing_data.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Find the Best Wine"
+    "# *Find the Best Wine"
    ]
   },
   {
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## By Country"
+    "## *By Country"
    ]
   },
   {
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wine Rating Points are given to wines that requested to get rated. Rating points range from 80 to 100 with a normal distribution. Using the average rating point per country a wine is produced Austria has the highest average rating. "
+    "Wine Rating Points are provided to wines that paid to get to have rating displayed. Rating points range from 80 to 100 with a normal distribution. Using the average rating point per country a wine is produced Austria has the highest average rating. "
    ]
   },
   {
@@ -191,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## By Variety"
+    "## *By Variety"
    ]
   },
   {
@@ -659,7 +659,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Are French and Italian wines comparable in rating and price?\n",
+    "# *Are French and Italian wines comparable in rating and price?\n",
     "#### Predict that French wine is better rated (based on the bar graph \"Average Rating Points by Country\") and French and Italian wine is same in price (based on the bar graph \"Median Price by Country\")"
    ]
   },
@@ -667,7 +667,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## France vs Italy"
+    "## *France vs Italy"
    ]
   },
   {
@@ -691,7 +691,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comparing Rating Points"
+    "### *Comparing Rating Points"
    ]
   },
   {
@@ -756,7 +756,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comparing Price"
+    "### *Comparing Price"
    ]
   },
   {
@@ -843,7 +843,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hypothesis Test - Independent Test"
+    "### *Hypothesis Test - Independent Test"
    ]
   },
   {
@@ -854,13 +854,13 @@
    "source": [
     "# Get the price and points of country one\n",
     "wine_results_one = wine_df.loc[wine_df[\"Country\"] == country_one]  \n",
-    "country_one_points = wine_results[\"Points\"]\n",
-    "country_one_price = wine_results[\"Price\"]\n",
+    "country_one_points = wine_results_one[\"Points\"]\n",
+    "country_one_price = wine_results_one[\"Price\"]\n",
     "\n",
     "# Get the price and points of country one\n",
     "wine_results_two = wine_df.loc[wine_df[\"Country\"] == country_two]  \n",
-    "country_two_points = wine_results[\"Points\"]\n",
-    "country_two_price = wine_results[\"Price\"]"
+    "country_two_points = wine_results_two[\"Points\"]\n",
+    "country_two_price = wine_results_two[\"Price\"]"
    ]
   },
   {
@@ -878,7 +878,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With a p-value of 1 on an ANOVA test, we fail to reject the null; where the null hypothesis says the mean of sample one and the mean of sample two are identical. Therefore, we fail to reject that French and Italian wines have the same average rating points."
+    "With a p-value of 9.083973539951924e-07 on an independent t-test, we reject the null; where the null hypothesis says the mean of sample one and the mean of sample two are identical. Therefore, we reject that French and Italian wines have the same average rating points."
    ]
   },
   {
@@ -896,14 +896,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With a p-value of 1 on an ANOVA test, we fail to reject the null; where the null hypothesis says the mean of sample one and the mean of sample two are identical. Therefore, we fail to reject that French and Italian wines have the same average price."
+    "With a p-value of 4.2658650896366496e-42 on an independent t-test, we reject the null; where the null hypothesis says the mean of sample one and the mean of sample two are identical. Therefore, we reject that French and Italian wines have the same average price."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When choosing between French vs Italian wines their average rating points and price is similar. There isn't one that is better than the other."
+    "##### When choosing between French vs Italian wines know that there is a difference between their rating points and price. \n",
+    "\n",
+    "#####  Our prediction that French wine is better rated (based on the bar graph \"Average Rating Points by Country\") isn't verified as better, however, by rejecting the null that French and Italian wines have the same average rating points means there can be a difference between the rating points of the wine.\n",
+    "##### Our prediction that French and Italian wine is same in price (based on the bar graph \"Median Price by Country\") is false since we reject the null that French and Italian wines have the same average price."
    ]
   },
   {
@@ -1276,9 +1279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-
     "# Linear Regression... is there a correlation between price and rating\n",
-
     "# Can we predict the rating based on price?\n",
     "\n",
     "wine_df\n",
@@ -1349,9 +1350,7 @@
     "pinots = np.asarray(us_pinot_df['Price'])\n",
     "\n",
     "pinot_quartiles = pd.DataFrame(pinots).quantile([.25,.5,.75], axis=0)\n",
-
     "pinot_quartiles"
-
    ]
   },
   {
@@ -1410,10 +1409,7 @@
     "cabs = np.asarray(us_cab_df['Price'])  #Cabernet Sauvignon\n",
     "\n",
     "cabs_quartiles = pd.DataFrame(cabs).quantile([.25,.5,.75], axis=0)\n",
-
     "cabs_quartiles"
-
-
    ]
   },
   {
