--- a/cleaning_data.ipynb
+++ b/cleaning_data.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "# dependencies\n",
     "import pandas as pd\n",
-    "import os"
+    "import os "
    ]
   },
   {
@@ -28,6 +28,13 @@
    "source": [
     "# file path\n",
     "file = 'winemag-data_first150k.csv'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I chose this csv over the other because it had more wines to look at. This one had less columns and we didn't need any of the others that the other had that this one did not."
    ]
   },
   {
@@ -52,6 +59,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So I noticed that some columns had a lot of null values and they also were not useful to what we were looking into so I decided to drop them. But, the region_1 column need to stay for the potential bonus question that I wanted to look into, so this is posed a problem where i could not just drop all na values."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -69,7 +83,7 @@
    "source": [
     "# keeping only the columns we want (dropping imported index, description, designation, region_2 and winery)\n",
     "# dropping those partially because we don't need them , parially because they lose us lots of data\n",
-    "less_dirty_wine_df = dirty_wine_df[['country', 'points', 'price', 'province', 'region_1', 'variety',  ]]"
+    "less_dirty_wine_df = dirty_wine_df[['country', 'points', 'price', 'province', 'region_1', 'variety' ]]"
    ]
   },
   {
@@ -90,6 +104,13 @@
     "# I am dropping all na's in in all columns except region_1. if i drop na's in that column we lose almost all our\n",
     "# counrties (a lot of data goes away like smoke in the wind)\n",
     "cleaned_wine_df = less_dirty_wine_df.dropna(subset=['country', 'province', 'variety', 'price', 'points'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here I am dropping all na's EXCEPT in the region_1 column. If i drop in the region one column i lose all my countries except a few. That is not good. And I cannot get rid of that column because I need it in my bonus project."
    ]
   },
   {
@@ -134,6 +155,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the first csv I am going to export to the rest of the team, I am dropping alot of countries that we are not interested in. Due to the number of countries, amount of data available and that the countries above are really the ones that are leading the world in wine production."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -149,6 +177,13 @@
     "    wine_df = wine_df.append(cleaned_wine_df.loc[cleaned_wine_df['Country'] == land, :], ignore_index=True)\n",
     "    \n",
     "wine_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I started by creating an empty dataframe then populating it with data of only those countries we wanted to look at."
    ]
   },
   {
@@ -237,6 +272,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So there are some 500+ varieties in this set of data. Some that we just do not care about in this analysis due to their obscurity. So we decided to look at the top 25 varieties (they all have over 1000 entries)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -263,6 +305,13 @@
     "    variety_df = variety_df.append(wine_df.loc[wine_df['Variety'] == wine, :], ignore_index=True)\n",
     "\n",
     "variety_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I did the same as I did the same as I did for Countries but with varieties. Making a empty dataframe and populating with data for each variety."
    ]
   },
   {
@@ -322,6 +371,13 @@
     "us_df = wine_df.loc[wine_df['Country'] == 'US', :]\n",
     "\n",
     "region_df = us_df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is just creating a csv to work on with the bonus project. I want only US wine and only wine that has a region so i in this case finally drop all nulls. This works in this case because that problem I was running into before, the one of the only countries I was left with was the US, and I was left with an Abundance of data."
    ]
   },
   {
