--- a/bonus_Q_analysis.ipynb
+++ b/bonus_Q_analysis.ipynb
@@ -179,6 +179,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Volume of Syrah Produced"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -297,6 +304,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Price of Syrah by Region"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -398,6 +412,13 @@
    "source": [
     "region_points_list = [region_points_plot.index[i][1] for i in range(0,len_of_plot)]\n",
     "region_points_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Rating of Syrah by Region"
    ]
   },
   {
