good stopping point

--- a/analyzing_data.ipynb
+++ b/analyzing_data.ipynb
@@ -938,7 +938,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### United States specific wine analysis"
+    "## United States focued wine analysis\n",
+    "There are a few questions we seek to investigate related to the wine produced domestically.  What are the to varietals produced in this country?\n",
+    "\n",
+    "We will also look at where the wine comes from within the United State.  California is the most well-known wine producing area in the United States, but how dominate is it? "
    ]
   },
   {
@@ -949,7 +952,7 @@
    "source": [
     "# Creating a DF with only us wines\n",
     "US_only = wine_df.loc[wine_df[\"Country\"] == \"US\"]\n",
-    "US_only"
+    "US_only.head()"
    ]
   },
   {
@@ -958,10 +961,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Summing the entries to finding out how many times each varietal is mentioned in the data\n",
+    "# Using a groupby to find out how many times each varietal is mentioned in the data\n",
+    "# Sorting the data to find the 25 most common varietals in the US\n",
     "us_var = US_only.groupby(\"Variety\")\n",
     "us_varieties = us_var.count()\n",
-    "us_varieties"
+    "us_varieties = us_varieties.sort_values(by=\"Country\", ascending=False)\n",
+    "us_varieties.head (25)"
    ]
   },
   {
@@ -988,37 +993,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Returns the top 40 varietals from US wineries\n",
-    "us_var_top = us_varieties.loc[us_varieties[\"Country\"] >= 1000]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "us_var_top.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "other_wine = pd.DataFrame([[other,other,other,other,other]], columns=list([\"Country\",\"Points\",\"Price\",\"Province\",\"Region\"]))\n",
-    "other_wine = other_wine.rename({\"0\":\"Other (206 Varietals)\"}) \n",
-    "other_wine"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "us_var_top = us_var_top.append(other_wine, ignore_index=False)\n",
+    "# Returns the top 11 varietals from US wineries\n",
+    "us_var_top = us_varieties.loc[us_varieties[\"Country\"] >= 1000]\n",
     "us_var_top"
    ]
   },
@@ -1028,6 +1004,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating a little DF that will be the data previoulsy removed from the DF\n",
+    "other_wine = pd.DataFrame([[other,other,other,other,other]], columns=list([\"Country\",\"Points\",\"Price\",\"Province\",\"Region\"]))\n",
+    "other_wine = other_wine.rename({0:\"Other (206 Varietals)\"}, axis=\"index\") \n",
+    "other_wine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding the little DF previously crated back into the \"us_var_top\" DF\n",
+    "us_var_top = us_var_top.append(other_wine, ignore_index=False)\n",
     "us_var_top = us_var_top.sort_values(by=\"Country\", ascending=False)\n",
     "us_var_top"
    ]
@@ -1046,7 +1036,8 @@
     "sizes = us_var_top[\"Country\"]\n",
     "\n",
     "# The colors of each section of the pie chart\n",
-    "# colors = [\"red\", \"orange\", \"lightcoral\", \"lightskyblue\"]\n",
+    "colors = [\"gray\", \"crimson\", \"firebrick\", \"gold\", \"mediumvioletred\", \"darkred\", \n",
+    "          \"indianred\", \"red\", \"lemonchiffon\", \"brown\", \"khaki\", \"sienna\"]\n",
     "\n",
     "# Seperate the top 3 Varietals\n",
     "explode = (0, 0.1, 0.1, 0.1, 0, 0, 0, 0, 0, 0, 0, 0)"
@@ -1058,8 +1049,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.pie(sizes, labels=labels, autopct=\"%1.1f%%\", shadow=True, explode=explode, radius=2.5)\n",
+    "plt.pie(sizes, labels=labels, autopct=\"%1.1f%%\", shadow=True, colors=colors, explode=explode, radius=2.5)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conclusion\n",
+    "There are over 215 varietals of wine produced in the US.  There are often varietals or blends that are explorations or favorites of winemakers, (vintners), may not be well known by the general wine-buying public.  The top three varietals produced in the US are Pinot Noir, Cabernet Sauvignon, and Chardonnay.  They accound for nearly 45% of all wine produced in the US."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ### Where is wine produce in the United States?\n",
+    " In this section, we will look at California's dominence as the top wine producer in the United States."
    ]
   },
   {
@@ -1097,16 +1104,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "other_province = pd.DataFrame([[other_prov,other_prov,other_prov,other_prov,other_prov]], columns=list([\"Country\",\"Points\",\"Price\",\"Province\",\"Region\"]))\n",
-    "other_province"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Returns the top wine producing provinces in the US by looking at those with 1000 or more entries\n",
     "province_top = province.loc[province[\"Country\"] >1000]\n",
     "province_top"
@@ -1118,9 +1115,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Adding the previoulsy deleted data back in as single summed data point\n",
-    "province_top.append(other_province, ignore_index=False)\n",
-    "province_top"
+    "other_province = pd.DataFrame([[other_prov,other_prov,other_prov,other_prov,other_prov]], columns=list([\"Country\",\"Points\",\"Price\",\"Province\",\"Region\"]))\n",
+    "other_province = other_province.rename({0:\"Other (20 Provinces)\"}, axis=\"index\") \n",
+    "other_province"
    ]
   },
   {
@@ -1129,9 +1126,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# province_top.loc[\"Other Provinces (469 Provinces)\"] = [other_prov,other_prov,other_prov,other_prov,other_prov]\n",
-    "# province_top = province_top.sort_values(by=\"Country\", ascending=False)\n",
-    "# province_top"
+    "# Adding the previoulsy deleted data back in as single summed data point\n",
+    "province_top = province_top.append(other_province, ignore_index=False)\n",
+    "province_top"
    ]
   },
   {
@@ -1148,7 +1145,7 @@
     "sizes = province_top[\"Country\"]\n",
     "\n",
     "# The colors of each section of the pie chart\n",
-    "# colors = [\"red\", \"orange\", \"lightcoral\", \"lightskyblue\"]\n",
+    "colors = [\"salmon\", \"lightseagreen\", \"papayawhip\", \"paleturquoise\", \"slategray\"]\n",
     "\n",
     "# Seperate the top 3 Varietals\n",
     "explode = (0.1, 0, 0, 0, 0)"
@@ -1160,8 +1157,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.pie(sizes, labels=labels, autopct=\"%1.1f%%\", shadow=True, explode=explode, startangle=90, radius=2.5)\n",
-    "plt.show()"
+    "total_prov = province[\"Country\"].sum()\n",
+    "total_prov\n",
+    "percents = []\n",
+    "for prov, row in province_top.iterrows():\n",
+    "    percent = round(row[\"Country\"]/total_prov*100,2)\n",
+    "    print(percent)\n",
+    "    percents.append(percent)\n",
+    "    \n",
+    "percents"
    ]
   },
   {
@@ -1170,14 +1174,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patches, text = plt.pie(sizes, shadow=True, explode=explode, startangle=90, radius=2.5)\n",
+    "cake, text = plt.pie(sizes, shadow=True, colors=colors, explode=explode, \n",
+    "                        startangle=90, radius=2.5)\n",
     "    \n",
-    "plt.legend(patches, labels, loc=\"best\", bbox_to_anchor=(-0.1,1.), fontsize=12)\n",
+    "plt.legend(cake, labels, loc=\"upper right\", bbox_to_anchor=(-0.75,1.0), fontsize=12)\n",
     "plt.show()\n",
     "\n",
     "# Avoiding overlapping labels\n",
     "# https://stackoverflow.com/questions/23577505/how-to-avoid-overlapping-of-labels-autopct-in-a-matplotlib-pie-chart \n",
     "# Accessed 14 Feb 2021"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conclusion\n",
+    "There are "
    ]
   },
   {
@@ -1230,7 +1243,7 @@
    "source": [
     "# adding the mean and median into the DF for easier comparison\n",
     "mean_median = pd.merge(mean, median, left_index=True, right_index=True, suffixes=(\"_mean\",\"_median\"))\n",
-    "best = mean_median.sort_values(by=\"Points:Price_mean\", ascending=False)\n",
+    "best = mean_median.sort_values(by=\"Points:Price_median\", ascending=False)\n",
     "best"
    ]
   },
@@ -1242,12 +1255,12 @@
    "source": [
     "# plotting the price/points mean per country\n",
     "x_axis_country = best.index\n",
-    "point_per = best[\"Points:Price_mean\"]\n",
+    "point_per = best[\"Points:Price_median\"]\n",
     "plt.bar(x_axis_country, point_per, align=\"center\")\n",
     "plt.xticks(rotation=45)\n",
     "plt.xlabel(\"Country\")\n",
     "plt.ylabel(\"Points per Dollar\")\n",
-    "plt.title(\"Average Points per Dollar\")\n",
+    "plt.title(\"Median Points per Dollar\")\n",
     "\n",
     "plt.show()"
    ]
@@ -1276,9 +1289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-
     "# Linear Regression... is there a correlation between price and rating\n",
-
     "# Can we predict the rating based on price?\n",
     "\n",
     "wine_df\n",
@@ -1349,9 +1360,7 @@
     "pinots = np.asarray(us_pinot_df['Price'])\n",
     "\n",
     "pinot_quartiles = pd.DataFrame(pinots).quantile([.25,.5,.75], axis=0)\n",
-
     "pinot_quartiles"
-
    ]
   },
   {
@@ -1410,10 +1419,7 @@
     "cabs = np.asarray(us_cab_df['Price'])  #Cabernet Sauvignon\n",
     "\n",
     "cabs_quartiles = pd.DataFrame(cabs).quantile([.25,.5,.75], axis=0)\n",
-
     "cabs_quartiles"
-
-
    ]
   },
   {
