--- a/bonus_Q_analysis.ipynb
+++ b/bonus_Q_analysis.ipynb
@@ -499,7 +499,7 @@
    "source": [
     "# Walla Walla Valley\n",
     "\n",
-    "Walla Walla Valley actually comes up in all three. Twice as Washinton, and twice as Wregon. This is a interesting valley that is located on top of the border of the two states and produces great wine. This seems like the ideal location for growing syrah.\n",
+    "Walla Walla Valley actually comes up in all three. Twice as Washinton, and twice as Oregon. This is a interesting valley that is located on top of the border of the two states and produces great wine. This seems like the ideal location for growing syrah.\n",
     "\n",
     "Walla Walla Valley has peaked my interest as a potential region to grow my Syrah vines so I am going to take a closer look at the region\n"
    ]
